Put images into flex box
Format on WFN, PP and personal portfolio pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,6 +63,29 @@
     <p>After I had a draft of the content, I began sketching ideas for the design. I wanted to start with a mobile-first approach so that I could easily show the portfolio on my phone.</p>
     <p>After pencil drawing and wire-framing, I created the design in Illustrator. I started with a simple aesthetic so that I could prioritize the message and function of the site. As I developed the content and asked for feedback, I could easily remove parts of the design that did not support those priorities.</p>
     <p>I am still working on editing the content describing my work.</p>
+    <h3>Photos</h3>
+    <div class="flex-boxes">
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches1.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches2.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/portfolio/sorting-cards.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/portfolio/word-map.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+    </div>
   </section>
   <footer>
     <div class="social-media">
