--- a/posting-pro.html
+++ b/posting-pro.html
@@ -52,6 +52,54 @@
     <p>Over the next couple months we continued to refine and test the tool with hiring managers and HR representatives in New Orleans and San Francisco. Although we found that Posting Pro added value and promoted diversity, we needed to better understand the hiring process so that we could integrate the tool without adding extra work.</p>
     <p>Halfway through the year we worked to add a “Start from Template” feature to Posting Pro. This would allow an employer to create a job posting from one that already existed for a given position. The templates were written without implicit bias and explicitly referenced skills required for the position rather than using education as a proxy. As the hiring manager edited the posting, it would be analyzed for implicit bias.</p>
     <p>We determined that by helping an employer to create a job posting faster, we could integrate the tool into hiring process and create skills-based and inclusive job postings. We are still developing Posting Pro, you can check it out now by visiting <a href="https://posting-pro.herokuapp.com/" title="Posting Pro" target="_blank">posting-pro.herokuapp.com/</a>.</p>
+
+    <h3>Photos</h3>
+    <div class="flex-boxes">
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/posting-pro/word-association.jpg" alt="List of word associations to help describe career pathways."></div>
+        <small>Word association list for career pathways</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/posting-pro/journey-map.jpg" alt="Journey map written on post-it notes to describe the journey through the tool."></div>
+        <small>Post-it note journey map</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/posting-pro/sketching.jpg" alt="White board sketching of user interface."></div>
+        <small>Sketching UI on a whiteboard</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/posting-pro/sketching-2.jpg" alt="White board sketching of user interface."></div>
+        <small>Sketching UI on a whiteboard</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/posting-pro/posting-pro-sketches.gif" alt="A gif that moves through the screens on one version of Posting Pro."></div>
+        <small>User interface</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/posting-pro/cost-map.jpg" alt="Post-it notes places on a graph. X-axis is labeled 'Time and Effort' and Y-axis is labeled 'Impact'"></div>
+        <small>Potential feature cost map measuring time and effort against impact.</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/posting-pro/cut-paste.jpg" alt="Web-based interface is printed out cut into slices, person is re-organizing them."></div>
+        <small>Exercise improving usability with existing UI elements.</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/posting-pro/planning.jpg" alt="White board with text written on it describing components of tool and identifying biases to consider."></div>
+        <small>White board planning</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/posting-pro/postingPro.gif" alt="A gif that moves through the screens on one version of Posting Pro."></div>
+        <small>User interface</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/posting-pro/wireframe.png" alt="Wireframe design created in Balsalmiq to represent user interface."></div>
+        <small>Wireframe created in balsamiq of user interface.</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/posting-pro/wireframe2.png" alt="Wireframe design created in Balsalmiq to represent user interface."></div>
+        <small>Wireframe created in balsalmiq of user interface.</small>
+      </a>
+    </div>
   </section>
   <footer>
     <div class="social-media">
