--- a/work-forward-nola.html
+++ b/work-forward-nola.html
@@ -51,6 +51,101 @@
     <p>We heard from various career counselors that another drop off occurred when job seekers expected to walk in and out the same day with a job. When this didn’t happen, they lost valuable trust in the system and did not return.</p>
     <p>After a small print test <!--(see One-Pager)-->, we built a mobile-first website that compiled information about each job center in one place. It provided suggestions to make the most of a visit, such as in advance and remembering to bring a driver’s license or state ID. A job seeker could also take a career assessment that matched their interests to potential careers in New Orleans. Throughout the website, messaging indicated that the process would take time but that the job seeker would be supported throughout.</p>
     <p>If career counselors can spend more time connecting job seekers to services that will lead them to careers, there will be better participation in the workforce system. We are still developing Work Forward NOLA, you can check it out now by visiting <a href="http://www.workforwardnola.com" title="Work Forward NOLA" target="_blank">www.workforwardnola.com</a>.</p>
+    <h3>Photos</h3>
+    <div class="flex-boxes">
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/appt.gif" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/career-exploration.gif" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/design-session.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/Georgia-career-exploration.png" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/journey-map-2.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/journey-map.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/journey-map3.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/one-pager-sketches.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/one-pager.gif" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/One-Pager.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/original-one-pager.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/Pascal-career-exploration.png" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/portfolio-sketches.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/portfolio-sketches2.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/re-designed-one-pager.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/steph-career-exploration.png" alt="TBD"></div>
+        <small>Wireframe created in balsalmiq of user interface.</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/usability-test.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/wfn.gif" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/wfnv.1.gif" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/wfnv.2.gif" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/when-they.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/workforce-triangle.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/workforce.jpg" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+    </div>
   </section>
   <footer>
     <div class="social-media">
