Added two images
Work Forward NOLA journey maps

--- a/work-forward-nola.html
+++ b/work-forward-nola.html
@@ -145,6 +145,14 @@
         <div class="flex-image"><img src="assets/images/work-forward-nola/workforce.jpg" alt="TBD"></div>
         <small>TBD</small>
       </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/JobSeekerJourneyMap.png" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
+      <a href="javascript:void(0)" class="flex-box">
+        <div class="flex-image"><img src="assets/images/work-forward-nola/WorkforceSystemUserJourney.png" alt="TBD"></div>
+        <small>TBD</small>
+      </a>
     </div>
   </section>
   <footer>
