Added typography system
Also added alt text and descriptions on images

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
   <script src="assets/script/snap.svg-min.js"></script>
   <script src ="assets/script/main.js"></script>
 
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200italic,300,300italic,400,400italic,600,600italic,700,700italic,900,900italic" rel="stylesheet">
+  <link href='//fonts.googleapis.com/css?family=Lusitana:400,700' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Merriweather+Sans:400,300,300italic,400italic,700italic,700,800,800italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="assets/style/css/main.css">
 </head>
+
 
 <body id="primary">
   <div class="centered-navigation" role="banner">
@@ -60,68 +63,27 @@
 </a></li>
       </ul>
     </div>
-    <p>My experience in the public sector has equipped me with expertise in government design, user engagement and workforce. I enjoy building relationships with people and creating growth opportunities for under-served communities.</p>
+    <p>Through my experience in the public sector I've developed an expertise in government design, user engagement and workforce. I enjoy building relationships with people and creating growth opportunities for under-served communities.</p>
     <p><a href="mailto:contact@scain.design" title="Email Stephanie Cain">Send me an email</a>.</p>
   </header>
   <section id="featuredProjects">
     <h2>Featured Projects</h2>
-    <div class="cards">
-      <a href="work-forward-nola.html" target="_blank" title="Work Forward NOLA">
-        <div class="card">
-          <div class="card-image">
-            <img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/>
-          </div>
-          <div class="card-header">
-            <h3>Work Forward NOLA</h3>
-          </div>
-          <div class="card-copy">
-            <p>A mobile-first website to assist job seekers in New Orleans navigate the workforce system.</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="card">
-        <a href="posting-pro.html" target="_blank" title="Posting Pro">
-          <div class="card-image">
-            <img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/>
-          </div>
-          <div class="card-header">
-            <h3>Posting Pro</h3>
-          </div>
-          <div class="card-copy">
-            <p>A job posting creation tool to help employers attract the right candidaties with inclusive, skills-based hiring.</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="card">
-        <a href="portfolio.html" target="_blank" title="Portfolio">
-          <div class="card-image">
-            <img class="square" src="assets/images/portfolio-icon.png" title="Personal Portfolio Icon" alt="Personal Portfolio Icon">
-          </div>
-          <div class="card-header">
-            <h3>Personal Portfolio</h3>
-          </div>
-          <div class="card-copy">
-            <p>A mobile-first website that describes the process of my recent work.</p>
-          </div>
-        </a>
-      </div>
-
-
-      <div class="card">
-        <a href="web-request-system.html" target="_blank" title="Web Request System">
-          <div class="card-image">
-            <img class="square" src="assets/images/osmre-logo.png" title="Office of Surface Mining Reclamation and Enforcement Logo" alt="Office of Surface Mining Reclamation and Enforcement Logo">
-          </div>
-          <div class="card-header">
-            <h3>Web Request System</h3>
-          </div>
-          <div class="card-copy">
-            <p>Re-design of the regional and national websites to improve navigation and develop branding.</p>
-          </div>
-        </a>
-      </div>
+    <div class="flex-boxes">
+      <a href="javascript:void(0)" class="flex-box" target="_blank" title="Work Forward NOLA">
+        <img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/>
+        <h3>Work Forward NOLA</h3>
+        <p>A mobile-first website to assist job seekers in New Orleans navigate the workforce system.</p>
+      </a>
+      <a href="javascript:void(0)" class="flex-box" href="posting-pro.html" target="_blank" title="Posting Pro">
+        <img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/>
+        <h3>Posting Pro</h3>
+        <p>A job posting creation tool to help employers attract the right candidaties with inclusive, skills-based hiring.</p>
+      </a>
+      <a href="javascript:void(0)" class="flex-box" href="portfolio.html" target="_blank" title="Portfolio">
+        <img class="square" src="assets/images/portfolio-icon.png" title="Personal Portfolio Icon" alt="Personal Portfolio Icon">
+        <h3>Personal Portfolio</h3>
+        <p>A mobile-first website that describes the process of my recent work.</p>
+      </a>
     </div>
   </section>
   <footer>
