--- a/portfolio.html
+++ b/portfolio.html
@@ -66,24 +66,24 @@
     <h3>Photos</h3>
     <div class="flex-boxes">
       <a href="javascript:void(0)" class="flex-box">
-        <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches.jpg" alt="TBD"></div>
-        <small>TBD</small>
+        <div class="flex-image"><img src="assets/images/portfolio/sorting-cards.jpg" alt="Word association card deck results"></div>
+        <small>Word association cards</small>
       </a>
       <a href="javascript:void(0)" class="flex-box">
-        <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches1.jpg" alt="TBD"></div>
-        <small>TBD</small>
+        <div class="flex-image"><img src="assets/images/portfolio/word-map.jpg" alt="Word association map"></div>
+        <small>Word map</small>
       </a>
       <a href="javascript:void(0)" class="flex-box">
-        <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches2.jpg" alt="TBD"></div>
-        <small>TBD</small>
+        <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches.jpg" alt="Planning in sketchbook to identify and narrow down work to include"></div>
+        <small>Sketching</small>
       </a>
       <a href="javascript:void(0)" class="flex-box">
-        <div class="flex-image"><img src="assets/images/portfolio/sorting-cards.jpg" alt="TBD"></div>
-        <small>TBD</small>
+        <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches1.jpg" alt="Sketching featured projects"></div>
+        <small>Sketches for featured projects</small>
       </a>
       <a href="javascript:void(0)" class="flex-box">
-        <div class="flex-image"><img src="assets/images/portfolio/word-map.jpg" alt="TBD"></div>
-        <small>TBD</small>
+        <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches2.jpg" alt="Planning in sketchbook on what should be included"></div>
+        <small>Sketching</small>
       </a>
     </div>
   </section>
