--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>Stephanie Cain's Online Portfolio</title>
-  <meta name="description" content="About Stephanie Cain">
+  <meta name="description" content="About and Contact Information for Stephanie Cain">
   <meta name="author" content="Stephanie Cain">
 
   <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
       <nav role="navigation">
         <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
           <li class="nav-link"><a href="index.html" title="Home Page">Home</a></li>
-          <li class="nav-link"><a href="about.html" title="About">About</a></li>
+          <li class="nav-link"><a href="about-and-contact.html" title="About and Contact">About and Contact</a></li>
           <li class="nav-link"><a href="resume.html" title="Resume">Resume</a></li>
         </ul>
       </nav>
@@ -35,12 +35,6 @@
     <p class="center">I am currently based in San Francisco, California.</p>
     <p class="center">Interested in getting in touch? <a href="mailto:aunaprendoad@gmail.com" title="Email Stephanie Cain">Send me an email</a>.</p>
   </section>
-  <section id="process">
-    <h2>Process</h2>
-    <p>When I work on a project, I’m driven to continue learning throughout every stage of the process. I begin with independent research and competitive analysis to better understand the context around the problem.</p>
-    <p>Next, and most importantly, I listen to the people who already use or potentially will engage with the system. By building relationships, I can expand upon existing expertise and uncover perspectives that impact my own approach.</p>
-    <p>Communicating those learnings to my team helps us collaboratively brainstorm needs, assumptions and tests that lead to user-centered solutions.</p>
-  </section>
   <section>
     <h2>Interests</h2>
     <ul>
@@ -52,6 +46,12 @@
       <li>Creating (i.e. bookmaking, sewing, drawing, woodwork)</li>
       <li>Playing chess</li>
     </ul>
+  </section>
+  <section id="process">
+    <h2>About my Process</h2>
+    <p>When I work on a project, I’m driven to continue learning throughout every stage of the process. I begin with independent research and competitive analysis to better understand the context around the problem.</p>
+    <p>Next, and most importantly, I listen to the people who already use or potentially will engage with the system. By building relationships, I can expand upon existing expertise and uncover perspectives that impact my own approach.</p>
+    <p>Communicating those learnings to my team helps us collaboratively brainstorm needs, assumptions and tests that lead to user-centered solutions.</p>
   </section>
   <footer>
     <div class="social-media">
