--- a/osmre-website.html
+++ b/osmre-website.html
@@ -34,9 +34,10 @@
   <img id="hex-image" src="assets/images/osmre-logo.png" alt="Office of Surface Mining Reclamation and Enforcement logo"/>
   <section id="project-container">
     <div class="button-wrapper">
-      <a href="index.html#recentProjects" title="Recent Projects" class="basic-button center">See recent projects</a>
+      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button center">Other Featured Projects</a>
     </div>
     <h2>OSMRE Website</h2>
+    <p class="centered"><a href="http://www.osmre.gov" title="Office of Surface Mining Reclamation and Enforcement website" target="_blank">www.osmre.gov</a></p>
     <p>This project is under construction.</p>
     <!--<h3>Problem</h3>
     <p></p>
