--- a/portfolio.html
+++ b/portfolio.html
@@ -34,10 +34,10 @@
   <img id="hex-image" src="assets/images/portfolio-icon.png" alt="Blue abstract icon"/>
   <section id="project-container">
     <div class="button-wrapper">
-      <a href="index.html#recentProjects" title="Recent Projects" class="basic-button center">See recent projects</a>
+      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button center">Other Featured Projects</a>
     </div>
     <h2>Online Portfolio Process</h2>
-    <a class="projectLink" href="https://skcain.github.io/index.html" title="Personal Portfolio" target="_blank">https://skcain.github.io/index.html</a>
+    <p class="centered"><a href="http://scain.design" title="Personal Portfolio" target="_blank">scain.design</a></p>
 
     <h3>Problem</h3>
     <p>Need to build a presence online where I can share recent work.</p>
