--- a/resume.html
+++ b/resume.html
@@ -50,28 +50,15 @@
         <li>Working directly with city officials to improve job seeker engagement with the workforce system.</li>
       </ul>
 
-      <div class="cards">
-        <a href="work-forward-nola.html" target="_blank" title="Work Forward NOLA">
-          <div class="card">
-            <div class="card-header">
-              <h3>Work Forward NOLA</h3>
-            </div>
-            <div class="card-copy">
-              <p>A mobile-first website to assist job seekers in New Orleans navigate the workforce system.</p>
-            </div>
-          </a>
-        </div>
-
-        <div class="card">
-          <a href="posting-pro.html" target="_blank" title="Posting Pro">
-            <div class="card-header">
-              <h3>Posting Pro</h3>
-            </div>
-            <div class="card-copy">
-              <p>A job posting creation tool to help employers attract the right candidaties with inclusive, skills-based hiring.</p>
-            </div>
-          </a>
-        </div>
+      <div class="flex-boxes">
+        <a class="flex-box" href="work-forward-nola.html" target="_blank" title="Work Forward NOLA">
+          <h3>Work Forward NOLA</h3>
+          <p>A mobile-first website to assist job seekers in New Orleans navigate the workforce system.</p>
+        </a>
+        <a class="flex-box" href="posting-pro.html" target="_blank" title="Posting Pro">
+          <h3>Posting Pro</h3>
+          <p>A job posting creation tool to help employers attract the right candidaties with inclusive, skills-based hiring.</p>
+        </a>
       </div>
     </div>
 
@@ -104,39 +91,20 @@
         <li>Created a universal web request system, and
         <li>Developed an online dynamic employee organizational chart.</li>
       </ul>
-      <div class="cards">
-        <a href="employee-intranet.html" title="Learn more about the Employee Intranet">
-          <div class="card">
-            <div class="card-header">
-              <h3>Employee Intranet</h3>
-            </div>
-            <div class="card-copy">
-              <p>A re-design of the employee intranet to improve content and accessibility of information.</p>
-            </div>
-          </a>
-        </div>
 
-        <div class="card">
-          <a href="web-request-system.html" title="Learn more about the Web Request System">
-            <div class="card-header">
-              <h3>Web Request System</h3>
-            </div>
-            <div class="card-copy">
-              <p>Re-designed a request system used internally to track communication about web updates.</p>
-            </div>
-          </a>
-        </div>
-
-        <div class="card">
-          <a href="spr-posters.html" title="Learn more about the Stream Protection Rule Posters">
-            <div class="card-header">
-              <h3>Stream Protection Rule Posters</h3>
-            </div>
-            <div class="card-copy">
-              <p>A series of posters to be used at a series of meetings informing and collecting comments from the public.</p>
-            </div>
-          </a>
-        </div>
+      <div class="flex-boxes">
+        <a class="flex-box" href="employee-intranet.html" title="Learn more about the Employee Intranet">
+          <h3>Employee Intranet</h3>
+          <p>A re-design of the employee intranet to improve content and accessibility of information.</p>
+        </a>
+        <a class="flex-box" href="web-request-system.html" title="Learn more about the Web Request System">
+          <h3>Web Request System</h3>
+          <p>Re-designed a request system used internally to track communication about web updates.</p>
+        </a>
+        <a class="flex-box" href="spr-posters.html" title="Learn more about the Stream Protection Rule Posters">
+          <h3>Stream Protection Rule Posters</h3>
+          <p>A series of posters to be used at a series of meetings informing and collecting comments from the public.</p>
+        </a>
       </div>
     </div>
 
@@ -150,17 +118,11 @@
         <li>Supported online training by helping to develop, edit and produce videos</li>
       </ul>
 
-      <div class="cards">
-        <a href="osmre-website.html" title="Learn more about the OSMRE website">
-          <div class="card">
-            <div class="card-header">
-              <h3>www.osmre.gov</h3>
-            </div>
-            <div class="card-copy">
-              <p>Re-design of the regional and national websites to improve navigation and develop branding.</p>
-            </div>
-          </a>
-        </div>
+      <div class="flex-boxes">
+        <a class="flex-box" href="osmre-website.html" title="Learn more about the OSMRE website">
+          <h3>www.osmre.gov</h3>
+          <p>Re-design of the regional and national websites to improve navigation and develop branding.</p>
+        </a>
       </div>
     </div>
   </section>
