--- a/work-forward-nola.html
+++ b/work-forward-nola.html
@@ -34,10 +34,10 @@
   <img id="hex-image" src="assets/images/cfa-logo.png" alt="Code for America logo"/>
   <section id="project-container">
     <div class="button-wrapper">
-      <a href="index.html#recentProjects" title="Recent Projects" class="basic-button center">See recent projects</a>
+      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button center">Other Featured Projects</a>
     </div>
     <h2>Work Forward NOLA</h2>
-    <a class="projectLink" href="http://www.workforwardnola.com" title="Work Forward NOLA" target="_blank">www.workforwardnola.com</a>
+    <p class="centered"><a href="http://www.workforwardnola.com" title="Work Forward NOLA" target="_blank">www.workforwardnola.com</a></p>
 
     <h3>Problem</h3>
     <p>Job seekers dropping off at the beginning of the workforce pipeline.</p>
@@ -49,7 +49,7 @@
     <p>The workforce system encompasses various local, state and federal resources such as unemployment, job centers and WIOA (Workforce Innovation and Opportunity Act), a federally funded program to grant money for job training.  The system is complex and difficult to navigate resulting in job seekers who drop off when they become unsure of their next steps. Job seekers were more successful when they connected with someone who could help guide them to a career. If more candidates understood clear expectations ahead of time, attrition rates would be reduced and overall job center engagement would improve.</p>
     <p>The information available online for the various job centers in New Orleans was sparse and spread across websites. If someone had a question or was unsure what to do, they had to visit a center. Once they arrived they would be prompted to complete steps that they could’ve done on their own time, such as sign up for LAWorks, the Louisiana state job website.</p>
     <p>We heard from various career counselors that another drop off occurred when job seekers expected to walk in and out the same day with a job. When this didn’t happen, they lost valuable trust in the system and did not return.</p>
-    <p>After a small print test <!--(see One-Pager)-->, we built a mobile-first website that compiled information about each job center in one place. It provided suggestions to make the most of a visit, such as in advance and remembering to bring a driver’s license or state ID. A job seeker could also take a career assessment that matched their interests to potential careers in New Orleans. Throughout the website, messaging indicated that the process would take time but that the job seeker would be supported throughout.</p>
+    <p>After a small print test, we built a mobile-first website that compiled information about each job center in one place. It provided suggestions to make the most of a visit, such as in advance and remembering to bring a driver’s license or state ID. A job seeker could also take a career assessment that matched their interests to potential careers in New Orleans. Throughout the website, messaging indicated that the process would take time but that the job seeker would be supported throughout.</p>
     <p>If career counselors can spend more time connecting job seekers to services that will lead them to careers, there will be better participation in the workforce system. We are still developing Work Forward NOLA, you can check it out now by visiting <a href="http://www.workforwardnola.com" title="Work Forward NOLA" target="_blank">www.workforwardnola.com</a>.</p>
     <h3>Photos</h3>
     <div class="flex-boxes">
