--- a/posting-pro.html
+++ b/posting-pro.html
@@ -34,10 +34,10 @@
   <img id="hex-image" src="assets/images/cfa-logo.png" alt="Code for America logo"/>
   <section id="project-container">
     <div class="button-wrapper">
-      <a href="index.html#recentProjects" title="Recent Projects" class="basic-button center">See recent projects</a>
+      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button center">Other Featured Projects</a>
     </div>
     <h2>Posting Pro</h2>
-    <a class="projectLink" href="https://posting-pro.herokuapp.com/" title="Posting Pro" target="_blank">https://posting-pro.herokuapp.com/</a>
+    <p class="centered"><a href="https://posting-pro.herokuapp.com/" title="Posting Pro" target="_blank">https://posting-pro.herokuapp.com/</a></p>
 
     <h3>Problem</h3>
     <p>Employers inadvertently write job postings that dissuade qualified candidates from applying, resulting in turnover, low quality work and lack of growth opportunities.</p>
