--- a/spr-posters.html
+++ b/spr-posters.html
@@ -34,9 +34,9 @@
   <img id="hex-image" src="assets/images/osmre-logo.png" alt="Office of Surface Mining Reclamation and Enforcement logo"/>
   <section id="project-container">
     <div class="button-wrapper">
-      <a href="index.html#recentProjects" title="Recent Projects" class="basic-button center">See recent projects</a>
+      <a href="index.html#featuredProjects" title="Featured Projects" class="basic-button center">Other Featured Projects</a>
     </div>
-    
+
     <h2>Stream Protection Rule Posters</h2>
     <h3>Problem</h3>
     <p>The Stream Protection Rule required a series of meetings to inform and gather comments from the public on the various aspects of regulation.</p>
