--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,17 @@
   <meta charset="utf-8">
 
   <title>Stephanie Cain's Online Portfolio</title>
-  <meta name="description" content="Project: Online Portfolio">
+  <meta name="description" content="Project: Personal Portfolio">
   <meta name="author" content="Stephanie Cain">
 
   <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
+  <script src ="assets/script/featherlight.js"></script>
   <script src ="assets/script/main.js"></script>
 
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200italic,300,300italic,400,400italic,600,600italic,700,700italic,900,900italic" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Lusitana:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Merriweather+Sans:400,300,300italic,400italic,700italic,700,800,800italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="assets/style/css/featherlight.css">
   <link rel="stylesheet" href="assets/style/css/main.css">
 </head>
 
@@ -65,23 +69,23 @@
     <p>I am still working on editing the content describing my work.</p>
     <h3>Photos</h3>
     <div class="flex-boxes">
-      <a href="javascript:void(0)" class="flex-box">
+      <a href="#" class="flex-box" data-featherlight="assets/images/portfolio/sorting-cards.jpg">
         <div class="flex-image"><img src="assets/images/portfolio/sorting-cards.jpg" alt="Word association card deck results"></div>
         <small>Word association cards</small>
       </a>
-      <a href="javascript:void(0)" class="flex-box">
+      <a href="#" class="flex-box" data-featherlight="assets/images/portfolio/word-map.jpg">
         <div class="flex-image"><img src="assets/images/portfolio/word-map.jpg" alt="Word association map"></div>
         <small>Word map</small>
       </a>
-      <a href="javascript:void(0)" class="flex-box">
+      <a href="#" class="flex-box" data-featherlight="assets/images/portfolio/portfolio-sketches.jpg">
         <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches.jpg" alt="Planning in sketchbook to identify and narrow down work to include"></div>
         <small>Sketching</small>
       </a>
-      <a href="javascript:void(0)" class="flex-box">
+      <a href="#" class="flex-box" data-featherlight="assets/images/portfolio/portfolio-sketches1.jpg">
         <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches1.jpg" alt="Sketching featured projects"></div>
         <small>Sketches for featured projects</small>
       </a>
-      <a href="javascript:void(0)" class="flex-box">
+      <a href="#" class="flex-box" data-featherlight="assets/images/portfolio/portfolio-sketches2.jpg">
         <div class="flex-image"><img src="assets/images/portfolio/portfolio-sketches2.jpg" alt="Planning in sketchbook on what should be included"></div>
         <small>Sketching</small>
       </a>
@@ -186,5 +190,15 @@
       </ul>
     </div>
   </footer>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-85010120-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </body>
 </html>
