--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -7,6 +7,7 @@
   <title>Stephanie Cain's Online Portfolio</title>
   <meta name="description" content="About and Contact Information for Stephanie Cain">
   <meta name="author" content="Stephanie Cain">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
   <script src="assets/script/snap.svg-min.js"></script>
